<resources>
    <string name="app_name">KTZS</string>
    <string name="record">Record</string>
    <string name="course">Course Table</string>
    <string name="info">Info</string>
    <string name="forget_password">Forget Password?</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_account">Register Noew</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="signin_hint">Please scan the QRCode or input the SignInCode</string>
    <string name="sign_in">Sign In</string>
    <string name="location_hint">Locating…</string>
    <string name="choose_course">Choose Course</string>
    <string name="limit_time">Limit Time</string>
    <string name="minutes">Minutes</string>
    <string name="stop">Stop</string>
    <string name="setting">Setting</string>
    <string name="new_password">New Password</string>
    <string name="check_password">Check Password</string>
    <string name="old_password">Old Password</string>
    <string name="notice">Notice</string>
    <string name="title_detail">Detail</string>
    <string name="title_members">Members</string>
    <string name="submit">Submit</string>
    <string name="leave">Leave</string>
    <string name="leave_reason">Reason</string>
    <string name="leave_remark">Remark</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_range">Date Range</string>
    <string name="end_time">End Time</string>
    <string name="homework_title">Homework Title</string>
    <string name="homework_content">Content</string>

</resources>
