<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_course"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:paddingStart="24dp"
        android:paddingEnd="18dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"/>

    <org.angmarch.views.NiceSpinner
        android:id="@+id/course_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:elevation="1dp"
        app:textTint="@color/black"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/limit_time"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:paddingStart="24dp"
        android:paddingEnd="18dp"
        android:paddingTop="6dp"
        android:paddingBottom="6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/qmui_edittext_bg_border_bottom"
        android:elevation="1dp">

        <EditText
            android:id="@+id/limit_time"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="3"
            android:gravity="start|center_vertical"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:paddingStart="24dp"
            android:paddingEnd="6dp"
            android:paddingBottom="6dp"
            android:background="@color/transparent"
            android:textColor="?attr/qmui_config_color_black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/minutes"/>
    </LinearLayout>
</LinearLayout>