<?xml version="1.0" encoding="utf-8"?>
<com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:background="@color/qmui_config_color_background"
        android:fillViewport="true"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signin_hint"
                android:textSize="18sp"
                android:textAlignment="center"
                android:padding="16dp"/>

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                layout="@layout/layout_signin_input"/>

            <TextView
                android:id="@+id/signin_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/location_hint"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/signin_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:padding="4dp"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:background="@drawable/btn_ripple_edit" />

            <com.qmuiteam.qmui.widget.grouplist.QMUIGroupListView
                android:id="@+id/signin_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"/>
        </LinearLayout>
    </ScrollView>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/signin_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:qmui_topbar_bg_color="@color/app_color_blue_2"
        app:qmui_topbar_subtitle_color="@color/white"
        app:qmui_topbar_title_color="@color/white" />

</com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>