<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_pwd_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/dialog_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="?attr/qmui_config_color_black"
            android:textColorHint="?attr/qmui_config_color_gray_3"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionGo"
            android:background="@drawable/qmui_edittext_bg_border_bottom"
            android:gravity="start|center_vertical"
            android:hint="@string/old_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwd_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="?attr/qmui_config_color_black"
            android:textColorHint="?attr/qmui_config_color_gray_3"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionGo"
            android:background="@drawable/qmui_edittext_bg_border_bottom"
            android:gravity="start|center_vertical"
            android:hint="@string/new_password"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/check_pwd_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="15dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="true">

        <EditText
            android:id="@+id/dialog_check_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/qmui_config_color_black"
            android:textColorHint="?attr/qmui_config_color_gray_3"
            android:textSize="16sp"
            android:paddingStart="1dp"
            android:paddingEnd="1dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:imeOptions="actionDone"
            android:background="@drawable/qmui_edittext_bg_border_bottom"
            android:gravity="start|center_vertical"
            android:hint="@string/check_password"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>